--- a/15PuzzleApplication/qml.qrc
+++ b/15PuzzleApplication/qml.qrc
@@ -16,5 +16,6 @@
         <file>qml/MainMenu.qml</file>
         <file>qml/Records.qml</file>
         <file>qml/Tile.qml</file>
+        <file>qml/RecordsTable.qml</file>
     </qresource>
 </RCC>
