--- a/ClientServerVersion/15PuzzleApplication/qml.qrc
+++ b/ClientServerVersion/15PuzzleApplication/qml.qrc
@@ -25,5 +25,6 @@
         <file>qml/InvalidNicknameWindow.qml</file>
         <file>qml/InvalidPasswordWindow.qml</file>
         <file>qml/ConnectingToServerWindow.qml</file>
+        <file>qml/InternalServerErrorWindow.qml</file>
     </qresource>
 </RCC>
